unpackaged/objects/copado__Test_Script__c.object
<CustomObject>
	<description>The template test script.</description>
	<fields>
		<fullName>copado__Expected_Result__c</fullName>
		<label>Expected Result</label>
		<length>2000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Introduction__c</fullName>
		<label>Introduction</label>
		<length>2000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Org__c</fullName>
		<label>Credential</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Overall_Outcome__c</fullName>
		<label>Overall Outcome</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Passed</fullName>
				</value>
				<value>
					<fullName>Passed with comments</fullName>
				</value>
				<value>
					<fullName>Failed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Peer_Reviewer__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Peer Reviewer</label>
		<referenceTo>User</referenceTo>
		<relationshipLabel>Test Scripts</relationshipLabel>
		<relationshipName>Test_Scripts</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Prerequisites__c</fullName>
		<label>Prerequisites</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Project__c</fullName>
		<formula>copado__User_Story__r.copado__Project__r.Name</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Project</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Risk__c</fullName>
		<label>Risk</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Low</fullName>
					<default>true</default>
					<label>Low</label>
				</value>
				<value>
					<fullName>Medium</fullName>
				</value>
				<value>
					<fullName>High</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Sprint__c</fullName>
		<formula>copado__User_Story__r.copado__Sprint__r.Name</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Sprint</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Draft</fullName>
					<default>true</default>
					<label>Draft</label>
				</value>
				<value>
					<fullName>Ready for testing</fullName>
				</value>
				<value>
					<fullName>Complete</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Test_Description__c</fullName>
		<label>Test Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Test_Title__c</fullName>
		<label>Test Title</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>Test Scripts (User Story)</relationshipLabel>
		<relationshipName>Test_Scripts_UserStory</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Test Script</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Test_Title__c</columns>
		<columns>copado__Org__c</columns>
		<columns>copado__Project__c</columns>
		<columns>copado__Status__c</columns>
		<columns>copado__User_Story__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>TS-{00000}</displayFormat>
		<label>Test Script Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Test Scripts</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>